test/fail/integration/_fail_grammar_type_func_2.hs
x :: Int -> int -> Bool
main = print "hello"